<resources>
    <string name="app_name">Learn Android</string>
    <string name="connecting">連線中</string>

    <string name="dialog_permission_hint1">為了搜尋裝置，我們需要您提供位置資訊。</string>
    <string name="dialog_permission_hint2">(我們只會在搜尋中使用，並且不會儲存。)</string>
    <string name="dialog_permission_confirm">提供</string>
    <string name="dialog_permission_cancel">稍後再說</string>

    <string name="title">Title</string>
    <string name="type">Type</string>
    <string name="brightness_and_temperature">亮度/色溫</string>
    <string name="fan">風扇</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="uvc">UVC</string>
    <string name="timer">定時</string>
    <string name="not_setting">未設定</string>

    <string name="brightness">亮度</string>
    <string name="color_temperature">色溫</string>
    <string name="start_time">開始時間</string>
    <string name="end_time">結束時間</string>
    <string name="confirm">確認</string>
    <string name="clean">清除</string>
    <string name="percent" formatted="false">%d%%</string>
    <string name="time_format" formatted="false">%02d:%02d</string>
    <string name="timer_format" formatted="false">%s - %s</string>

    <string name="default_condition">value >= 5 &amp;&amp; value &lt; 10</string>
</resources>
